// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-tag renders correctly in the display variant in EC 1`] = `
<ecl-tag data-ecl-button-icon theme="ec" type="display">
  <!---->
  <span class="ecl-tag ecl-tag--display">
    An ECL tag
  </span>
</ecl-tag>
`;

exports[`ecl-tag renders correctly in the display variant in EU 1`] = `
<ecl-tag data-ecl-button-icon theme="ec" type="display">
  <!---->
  <span class="ecl-tag ecl-tag--display">
    An ECL tag
  </span>
</ecl-tag>
`;

exports[`ecl-tag renders correctly in the link variant in EC 1`] = `
<ecl-tag theme="ec" type="link" url="/example">
  <!---->
  <span class="ecl-tag ecl-tag--display">
    An ECL tag
  </span>
</ecl-tag>
`;

exports[`ecl-tag renders correctly in the link variant in EU 1`] = `
<ecl-tag theme="eu" type="link" url="/example">
  <!---->
  <span class="ecl-tag ecl-tag--display">
    An ECL tag
  </span>
</ecl-tag>
`;

exports[`ecl-tag renders correctly in the removable variant in EC 1`] = `
<ecl-tag theme="ec" type="removable">
  <!---->
  <span class="ecl-tag ecl-tag--display">
    An ECL tag
  </span>
</ecl-tag>
`;

exports[`ecl-tag renders correctly in the removable variant in EU 1`] = `
<ecl-tag theme="eu" type="removable">
  <!---->
  <span class="ecl-tag ecl-tag--display">
    An ECL tag
  </span>
</ecl-tag>
`;
